cranelift-codegen: add feature to explicitly enable the host ISA (#6551)
It is needed because cargo features are additive. Given a situation where you have two dependencies:

* One depends on cranelift aarch64 codegen, so it enables the `aarch64` feature.
* The other depends on cranelift native codegen, so it does not enable any arch feature.

Given the additive property of features, cranelift-codegen will be built with the `aarch64` feature for both dependencies (assuming they use the same cranelift version), so the native ISA will not be included (unless it is aarch64).

With the `host-arch` feature added here, the native host ISA can now be explicitly requested without risk of another crate of the dependency tree disabling it.

--- a/cranelift/codegen/Cargo.toml
+++ b/cranelift/codegen/Cargo.toml
@@ -44,7 +44,7 @@ cranelift-codegen-meta = { path = "meta", version = "0.98.0" }
 cranelift-isle = { path = "../isle/isle", version = "=0.98.0" }
 
 [features]
-default = ["std", "unwind"]
+default = ["std", "unwind", "host-arch"]
 
 # The "std" feature enables use of libstd. The "core" feature enables use
 # of some minimal std-like replacement libraries. At least one of these two
@@ -77,6 +77,8 @@ x86 = []
 arm64 = []
 s390x = []
 riscv64 = []
+# Enable the ISA target for the host machine
+host-arch = []
 
 # Option to enable all architectures.
 all-arch = [
